@@ -324,6 +324,7 @@ Doug Fort
 John Fouhy
 Stefan Franke
 Martin Franklin
+Kent Frazier
 Bruce Frederiksen
 Robin Friedrich
 Bradley Froehle
