@@ -15,6 +15,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #11508: Fixed uuid.getnode() and uuid.uuid1() on environment with
+  virtual interface.  Original patch by Kent Frazier.
+
 - Issue #11489: JSON decoder now accepts lone surrogates.
 
 - Fix test.test_support.bind_port() to not cause an error when Python was
